<?xml version="1.0"?>
<package format="3">
  <name>dm_imu</name>
  <version>0.1.0</version>
  <description>ROS2 driver for DM IMU device</description>
  <maintainer email="jyjhyjf@qq.com">hou</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>Eigen3</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
